# llvm

clang/docs/: ClangCommandLineReference.rst
clang/include/clang/Basic/: CodeGenOptions.def
clang/include/clang/Driver/: Options.td
clang/lib/CodeGen/: BackendUtil.cpp  CodeGenFunction.cpp
clang/lib/Driver/ToolChains/: Clang.cpp  CommonArgs.cpp  CommonArgs.h  Gnu.cpp
clang/lib/Frontend/: CompilerInvocation.cpp
compiler-rt/: CMakeLists.txt
compiler-rt/cmake/: config-ix.cmake
compiler-rt/include/xray/: xray_interface.h
compiler-rt/lib/: CMakeLists.txt
compiler-rt/lib/halo/: CMakeLists.txt  Error.cpp  LinuxPerfEvents.cpp  Monitor.cpp  Profiler.cpp  Profiler.h
compiler-rt/lib/halomon/: CMakeLists.txt  CallCountProfiler.h  Client.h  CodePatcher.cpp  CodePatcher.h  DynamicLinker.cpp  DynamicLinker.h  Error.cpp  Error.h  LinuxPerfEvents.cpp  LinuxPerfEvents.h  Logging.cpp  Logging.h  Monitor.cpp  MonitorState.cpp  MonitorState.h  Patcher.cpp  Patcher.h  Profiler.cpp  Profiler.h  SummaryStats.h  ThreadSafeContainer.h  ThreadSafeContainers.h  TimeLog.h  XRayEvent.h  XRayProfiler.h
compiler-rt/lib/xray/: xray_interface.cpp  xray_interface_internal.h  xray_trampoline_arm.S  xray_trampoline_x86_64.S
compiler-rt/test/xray/TestCases/Posix/: redirection-basic.cpp  redirection-instrument.cpp
llvm/include/llvm/: InitializePasses.h  LinkAllPasses.h
llvm/include/llvm/Passes/: PassBuilder.h
llvm/include/llvm/Transforms/IPO/: PassManagerBuilder.h
llvm/include/llvm/Transforms/Instrumentation/: Halo.h
llvm/lib/CodeGen/: TargetPassConfig.cpp
llvm/lib/Passes/: PassBuilder.cpp  PassRegistry.def
llvm/lib/Transforms/IPO/: PassManagerBuilder.cpp
llvm/lib/Transforms/Instrumentation/: CMakeLists.txt  Halo.cpp  HaloPrepare.cpp  Instrumentation.cpp
llvm/lib/Transforms/Scalar/: JumpThreading.cpp  LoopDataPrefetch.cpp  LoopInterchange.cpp  LoopPredication.cpp  LoopVersioningLICM.cpp  NewGVN.cpp
llvm/lib/Transforms/Vectorize/: SLPVectorizer.cpp
